# reimplement-nn-0tohero

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
lectures/: 0_autograd.py  1_bigram.py  2_mlp.py  3_batchnorm_and_statistics.py  4_backpropogation.py  5_cnn_1d.py  6_gpt_base.py  7_tokenizer.py  8_gpt2_base.py
lectures/utils/: names_preprocess.py  preprocess_names.py  savefig.py
