[project]
name = "re0tohero"
version = "0.1.0"
description = "Reimplement from scratch 'Neural Networks: Zero to Hero' Andrej Karpathy's course."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch==2.10.0",
]

# if you have an Nvidia GPU, don't touch code. It will install the cuda version of pytorch.
# else comment (#) all below to install default version of pytorch

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    {index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'"},
]
