[project]
name = "re0tohero"
version = "0.1.0"
description = "Reimplement from scratch 'Neural Networks: Zero to Hero' Andrej Karpathy's course."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch==2.10.0",
    "matplotlib>=3.10.0",
    "tiktoken>=0.12.0",
]

# PyTorch cuda version
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
    {index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'"},
]
